--- a/src/app/pages/participate/participate.component.html
+++ b/src/app/pages/participate/participate.component.html
@@ -29,23 +29,23 @@
                       </thead>
                       <tbody>
                       <tr  *ngFor="let e of events ; let i = index ">
-                      <td>{{e.title}}</td>
-                      <td>{{e.startDate | date:'yyyy-MM-dd HH:mm a'}}</td>
-                      <td>{{e.endDate | date:'yyyy-MM-dd HH:mm a'}}</td>
-                      <td>
-                      <form #f="ngForm" (ngSubmit)="onParticipate(f.value)">
-                      <input type="hidden" [(ngModel)]="username" name="username" />
-                      <input type="hidden" [(ngModel)]="e.id" name="id_event" />
-                        <div *ngIf=test[i]>
-                          <a class="info p-0">
-                            <i class="ft-check"> Participated</i>
-                          </a>
-                        </div>
-                        <div *ngIf=!test[i]>
-                          <button type="submit" class="btn btn-success btn-sm"> To participate </button>
-                        </div>
-                      </form>
-                      </td>
+                        <td>{{e.title}}</td>
+                        <td>{{e.startDate | date:'yyyy-MM-dd HH:mm a'}}</td>
+                        <td>{{e.endDate | date:'yyyy-MM-dd HH:mm a'}}</td>
+                        <td>
+                          <form #f="ngForm" (ngSubmit)="onParticipate(f.value)">
+                            <input type="hidden" [(ngModel)]="username" name="username" />
+                            <input type="hidden" [(ngModel)]="e.id" name="idEvent" />
+                            <div *ngIf=test[i]>
+                              <a class="info p-0">
+                                <i class="ft-check" (click)="unparticipate(f.value)" > Participated</i>
+                              </a>
+                            </div>
+                            <div *ngIf=!test[i]>
+                              <button type="submit" class="btn btn-success btn-sm"> To participate </button>
+                            </div>
+                          </form>
+                        </td>
                       </tr>
                       </tbody>
                     </table>
@@ -62,4 +62,3 @@
     <app-footer></app-footer>
   </div>
 </div>
-
