--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -85,9 +85,9 @@
                                 <span>My Inbox</span>
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="javascript:;">
+                            <a (click)="onLogOut()" class="dropdown-item" href="javascript:;">
                                 <i class="ft-power mr-2"></i>
-                                <span><a (click)="onLogOut()">Logout</a></span>
+                                <span><a>Logout</a></span>
                             </a>
                         </div>
                     </li>
