--- a/src/app/pages/events/list/events.component.html
+++ b/src/app/pages/events/list/events.component.html
@@ -27,6 +27,7 @@
                         <th>Title</th>
                         <th>Start Date</th>
                         <th>End Date</th>
+                        <th>Status</th>
                         <th>Operations</th>
                       </tr>
                       </thead>
@@ -35,10 +36,13 @@
                         <td>{{e.title}}</td>
                         <td>{{e.startDate | date:'yyyy-MM-dd HH:mm a'}}</td>
                         <td>{{e.endDate | date:'yyyy-MM-dd HH:mm a'}}</td>
+                        <td *ngIf="e.startDate < today"><span class="badge badge-danger mr-1">Finished</span></td>
+                        <td *ngIf="e.startDate === today"> <span class="badge badge-success mr-1">on air </span></td>
+                        <td *ngIf="e.startDate > today"> <span class="badge badge-info mr-1">Upcoming </span></td>
                         <td>
-                          <a class="success p-0" data-original-title="" title=""(click)="onUpadate(e.id)">
-                            <i class="ft-edit-2 font-medium-3 mr-2"></i>
-                          </a>
+                          <!--<a class="success p-0" data-original-title="" title=""(click)="onUpadate(e.id)">-->
+                            <!--<i class="ft-edit-2 font-medium-3 mr-2"></i>-->
+                          <!--</a>-->
                           <a class="danger" data-original-title="" title="" (click)="onDelete(e)">
                             <i class="ft-trash font-medium-3"></i>
                           </a>
@@ -48,6 +52,7 @@
                       </tbody>
                     </table>
                     <!--List Events Ends-->
+
                   </div>
                 </div>
               </div>
