--- a/src/app/pages/events/add/add.component.html
+++ b/src/app/pages/events/add/add.component.html
@@ -33,6 +33,7 @@
                           <br>
                           <button [disabled]="!f.valid"  type="submit" class="btn btn-primary">Save</button>
                           <button type="button" (click)="returnToCalendar()" class="btn btn-danger">Cancel</button>
+                          <button type="button" (click)="getToken()" class="btn btn-danger"> token </button>
                         </form>
                       </div>
                     </div>
