--- a/src/app/pages/pass-quiz/list-quiz/list-quiz.component.html
+++ b/src/app/pages/pass-quiz/list-quiz/list-quiz.component.html
@@ -40,7 +40,7 @@
                           </span>
                           </div>
                           <div *ngIf="m.totalQuestions">
-                            <button class="btn btn-outline-primary mr-1 mb-1" type="button" (click)="PassTheTest(m.id)">Take the Quiz</button>
+                            <button class="btn btn-outline-primary mr-1 mb-1" type="button" (click)="PassTheTest(m.id , m.level)">Take the Quiz</button>
                           </div>
                         </td>
                       </tr>
