--- a/src/app/pages/quiz/module/add-module/add-module.component.html
+++ b/src/app/pages/quiz/module/add-module/add-module.component.html
@@ -29,7 +29,8 @@
                         Number of question
                         <input class="form-control" ngModel="" type="number" name="nbr_questions"  placeholder="number of questions" required/>
                         <br>
-                        <select  class="form-control"  name="level" [(ngModel)]="level">
+                        Level
+                        <select  class="form-control"  name="level" [(ngModel)]="level" required>
                           <option value="1">Level 1</option>
                           <option value="2">Level 2</option>
                           <option value="3">Level 3</option>
