--- a/src/app/pages/quiz/module/update-module/update-module.component.html
+++ b/src/app/pages/quiz/module/update-module/update-module.component.html
@@ -26,6 +26,7 @@
                     Number of question
                     <input class="form-control" [(ngModel)]="module.nbr_questions" type="text" placeholder="Module number of questions" required/>
                     <br>
+                    Level
                     <select  class="form-control"  name="level" [(ngModel)]="module.level">
                       <option value="1">Level 1</option>
                       <option value="2">Level 2</option>
