--- a/src/app/pages/users/list/users.component.html
+++ b/src/app/pages/users/list/users.component.html
@@ -27,12 +27,14 @@
                         <thead>
                         <tr>
                           <th>Username</th>
+                          <th>Role</th>
                           <th>Operations</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr  *ngFor="let u of users |filter: searchText | paginate: { itemsPerPage: 6, currentPage: p}">
+                        <tr  *ngFor="let u of usersWithRole |filter: searchText | paginate: { itemsPerPage: 6, currentPage: p}">
                           <td>{{u.username}}</td>
+                          <td>{{u.role}}</td>
                           <td>
                             <a class="success p-0" data-original-title="" title="" (click)="onUpdateUser(u.id)">
                               <i class="ft-edit-2 font-medium-3 mr-2"></i>
