--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <!-- Sidebar Header starts -->
 <div class="sidebar-header">
     <div class="logo">
-        <a [routerLink]="['/']" class="logo-text">
+        <a [routerLink]="['/full-layout']" class="logo-text">
             <div class="logo-img">
                 <img src="assets/img/logo.png" />
             </div>
