--- a/src/app/pages/users/register/register.component.html
+++ b/src/app/pages/users/register/register.component.html
@@ -22,7 +22,8 @@
                       <form #f="ngForm" (ngSubmit)="onRegister(f.value)" novalidate>
                         <div class="form-group">
                           <label class="control-label">Username:</label>
-                          <input class="form-control" ngModel="" type="text" name="username" required/>
+                          <input class="form-control" ngModel="" type="text" name="username" #email = "ngModel" email required />
+                          <p class="alert alert-danger" *ngIf="email?.errors?.email">email error</p>
                         </div>
                         <div class="form-group">
                           <label class="control-label">Role:</label>
